# polymarket-maker-bot

./: .build_id  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  railway.toml
config/: default.toml
migrations/: 001_initial_schema.sql  002_maker_tables.sql
scripts/: migrate_sqlite_to_pg.py
src/: config.rs  error.rs  main.rs
src/db/: models.rs  pool.rs  queries.rs
src/discovery/: gamma.rs
src/events/: bus.rs
src/executor/: cancel_replace.rs  mod.rs  order_manager.rs
src/feeds/: binance.rs  coinbase.rs  delta.rs  mod.rs  polymarket.rs  types.rs
src/fees/: calculator.rs
src/logging/: structured.rs
src/position/: merger.rs  mod.rs  tracker.rs
src/strategy/: article.rs  engine.rs  mod.rs  pricing.rs  risk.rs
src/telegram/: bot.rs
src/web/: routes.rs  server.rs
tests/benches/: hot_loop.rs
